временно вырубил подписки на фронте

--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -141,7 +141,7 @@
             </ul>
             <div class="info__block__footer">
                 <span class="info__block__footer__price" id="mentoring_price"></span>
-                <a class="button" id="show-mentoring-button">оплатить</a>
+                <!-- <a class="button" id="show-mentoring-button">оплатить</a> -->
             </div>
         </div>
     </div>
