--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -172,12 +172,14 @@
         </div>
     </div> -->
     <div class="info" id="call">
-        <h2 class="info__title">ПЕРСОНАЛЬНЫЙ СОЗВОН</h2>
-        <h6 class="info__subtitle">> Любые темы, которые волнуют</h6>
+        <h2 class="info__title">ПЕРСОНАЛЬНЫЙ СОЗВОН (1ч)</h2>
+        <h6 class="info__subtitle">> Помогу устроить вашу карьеру </h6>
         <div class="info__block">
             <ul class="info__block__list">
-                <li class="info__block__list__item">Консультация по любым темам</li>
-                <li class="info__block__list__item">Приватно, без стрима</li>
+                <li class="info__block__list__item"> Переговоры о повышении</li>
+                <li class="info__block__list__item"> Смена профессии/специализации</li>
+                <li class="info__block__list__item"> Подготовка самопрезентации для интервью</li>
+                <li class="info__block__list__item"> Оценка примерной стоимости на рынке труда</li>
             </ul>
             <div class="info__block__footer">
                 <span class="info__block__footer__price" id="call_price"></span>
