--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -172,7 +172,7 @@
         </div>
     </div> -->
     <div class="info" id="call">
-        <h2 class="info__title">ПЕРСОНАЛЬНЫЙ СОЗВОН (1ч)</h2>
+        <h2 class="info__title">ПЕРСОНАЛЬНЫЙ СОЗВОН</h2>
         <h6 class="info__subtitle">> Помогу устроить вашу карьеру </h6>
         <div class="info__block">
             <ul class="info__block__list">
