--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -85,7 +85,7 @@
                     информативным
                 </li>
                 <li class="info__block__list__item">
-                    С радостью взгляну на каждую обновленную версию резюме и накину еще больше идей для
+                    С радостью взгляну на каждую обновленную версию резюме и накину идей для
                     улучшения
                 </li>
             </ul>
