--- a/src/main/resources/templates/pricing.html
+++ b/src/main/resources/templates/pricing.html
@@ -41,7 +41,7 @@
         <li class="header__links__item"><a href="https://www.youtube.com/@overrideTech" target="_blank">youtube</a></li>
         <li class="header__links__item"><a href="https://vk.com/overridetech" target="_blank">vk</a></li>
         <li class="header__links__item"><a href="https://www.tiktok.com/@overridetech" target="_blank">tiktok</a></li>
-        <li class="header__links__item"><a href="https://www.instagram.com/OverrideMe" target="_blank">instagram</a></li>
+        <li class="header__links__item"><a href="https://www.instagram.com/OverrideMe" target="_blank">instagram*</a></li>
         <div class="header__links__close close" id="links-close"></div>
     </ul>
     <div class="burger" id="burger">
